# surql-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  codecov.yml  justfile  mkdocs.yml
.cargo/: config.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  coverage.yml  dep-review.yml  dependabot-auto-merge.yml  docs.yml  nightly.yml  pr-title.yml  publish.yml  release.yml
benches/: types.rs
docs/: caching.md  cli.md  connection-management.md  features.md  index.md  installation.md  migration.md  migrations.md  orchestration.md  queries.md  query-ux.md  query_hints.md  quickstart.md  schema.md  v3-patterns.md  visualization.md
scripts/: check-wasm.sh
src/: error.rs  lib.rs  settings.rs
src/cache/: backend.rs  config.rs  decorator.rs  manager.rs  memory.rs  mod.rs  redis.rs  stats.rs
src/cli/: db.rs  fmt.rs  migrate.rs  mod.rs  orchestrate.rs  schema.rs
src/connection/: auth.rs  auth_manager.rs  client.rs  config.rs  context.rs  mod.rs  registry.rs  streaming.rs  transaction.rs
src/migration/: diff.rs  discovery.rs  executor.rs  generator.rs  history.rs  hooks.rs  mod.rs  models.rs  rollback.rs  squash.rs  versioning.rs  watcher.rs
src/orchestration/: coordinator.rs  environment.rs  health.rs  mod.rs  result.rs
src/orchestration/strategies/: canary.rs  mod.rs  parallel.rs  rolling.rs  sequential.rs
src/query/: batch.rs  builder.rs  crud.rs  executor.rs  expressions.rs  graph.rs  graph_query.rs  helpers.rs  hints.rs  mod.rs  results.rs  typed.rs
src/schema/: access.rs  analyzer.rs  edge.rs  fields.rs  mod.rs  parser.rs  registry.rs  sql.rs  table.rs  themes.rs  utils.rs  validator.rs  validator_utils.rs  visualize.rs
src/schema/parser/: access.rs  db.rs  edge.rs  event.rs  field.rs  index.rs  mod.rs  permissions.rs  table.rs
src/types/: coerce.rs  mod.rs  operators.rs  record_id.rs  record_ref.rs  reserved.rs  surreal_fn.rs
tests/: cli.rs  integration_cache.rs  integration_cache_redis.rs  integration_client.rs  integration_connection_ext.rs  integration_fulltext.rs  integration_migration.rs  integration_migration_polish.rs  integration_orchestration.rs  integration_query.rs  integration_query_graph.rs  integration_settings.rs
