[package]
name = "surql"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.90"
authors = ["Shon Thomas <shon@oneiriq.com>"]
license = "Apache-2.0"
description = "Code-first database toolkit for SurrealDB - schema definitions, migrations, query building, and typed CRUD (Rust port of oneiriq-surql)."
repository = "https://github.com/Oneiriq/surql-rs"
homepage = "https://oneiriq.github.io/surql-rs"
documentation = "https://oneiriq.github.io/surql-rs"
readme = "README.md"
keywords = ["surrealdb", "database", "orm", "query-builder", "migrations"]
categories = ["database", "database-implementations"]

[lib]
name = "surql"
path = "src/lib.rs"

[[bin]]
name = "surql"
path = "src/bin/surql.rs"
required-features = ["cli"]

[[bench]]
name = "types"
harness = false

[features]
default = ["client"]
client = ["dep:tokio", "dep:surrealdb", "dep:reqwest", "dep:futures"]
cli = ["client", "dep:clap", "dep:tokio", "dep:tracing-subscriber"]
cache-redis = ["dep:redis"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tracing = "0.1"
ulid = { version = "1.1", features = ["serde"] }

# Optional (feature-gated)
tokio = { version = "1.48", features = ["full"], optional = true }
surrealdb = { version = "3.0", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
futures = { version = "0.3", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
redis = { version = "0.27", features = ["tokio-comp"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.48", features = ["full", "test-util"] }
pretty_assertions = "1.4"
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
