[package]
name = "oneiriq-surql"
version = "0.2.2"
edition = "2021"
rust-version = "1.90"
authors = ["Shon Thomas <shon@oneiriq.com>"]
license = "Apache-2.0"
description = "Code-first database toolkit for SurrealDB - schema definitions, migrations, query building, and typed CRUD (Rust port of oneiriq-surql). Published as the `oneiriq-surql` crate; imported as `use surql::...`."
repository = "https://github.com/Oneiriq/surql-rs"
homepage = "https://oneiriq.github.io/surql-rs"
documentation = "https://oneiriq.github.io/surql-rs"
readme = "README.md"
keywords = ["surrealdb", "database", "orm", "query-builder", "migrations"]
categories = ["database", "database-implementations"]

[lib]
name = "surql"
path = "src/lib.rs"

[[bin]]
name = "surql"
path = "src/bin/surql.rs"
required-features = ["cli"]

[[bench]]
name = "types"
harness = false

[features]
default = ["client"]
# The async-client surface is gated in source with
# `cfg(any(feature = "client", feature = "client-rustls"))`, so both
# variants expose the same `DatabaseClient` / `executor` / `crud` / `graph`
# API. Pick exactly one of `client` (the historical `native-tls` default)
# or `client-rustls` (pure-Rust TLS, no `openssl-sys`).
client = [
    "dep:tokio",
    "dep:surrealdb",
    "dep:reqwest",
    "dep:futures",
    "surrealdb/native-tls",
    "reqwest/default-tls",
]
# Pure-Rust TLS variant. Enables the same `client` code paths but swaps the
# TLS backend to `rustls` + webpki roots so nothing in the resolved
# dependency graph depends on `openssl-sys`. Use this variant on CI
# runners / images that do not install `libssl-dev`.
#
# Note that enabling this alongside `client` is additive and compiles, but
# the resulting binary will link both TLS stacks. Downstream workspaces
# should pick one variant and wire it through a workspace feature flag.
client-rustls = [
    "dep:tokio",
    "dep:surrealdb",
    "dep:reqwest",
    "dep:futures",
    "surrealdb/rustls",
    "reqwest/rustls-tls-webpki-roots",
]
cli = [
    "client",
    "orchestration",
    "settings",
    "dep:clap",
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:comfy-table",
    "dep:colored",
]
cache = ["dep:tokio", "dep:async-trait"]
cache-redis = ["cache", "dep:redis"]
settings = ["dep:dotenvy", "dep:toml"]
orchestration = ["client", "dep:async-trait"]
watcher = ["dep:notify", "dep:tokio", "dep:tokio-util"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tracing = "0.1"
ulid = { version = "1.1", features = ["serde"] }

# Optional (feature-gated)
tokio = { version = "1.48", features = ["full"], optional = true }
# `surrealdb` and `reqwest` opt out of default features so the TLS backend is
# selected explicitly by the `client` / `client-rustls` feature flags. The
# default-feature set of `surrealdb` includes `rustls`; we prefer to be
# explicit so downstream consumers know which TLS stack they are pulling.
surrealdb = { version = "3.0", default-features = false, features = ["protocol-ws"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "http2", "system-proxy"], optional = true }
futures = { version = "0.3", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
redis = { version = "0.27", features = ["tokio-comp"], optional = true }
async-trait = { version = "0.1", optional = true }
dotenvy = { version = "0.15", optional = true }
toml = { version = "0.8", optional = true }
notify = { version = "7.0", optional = true }
tokio-util = { version = "0.7", optional = true }
comfy-table = { version = "7.1", optional = true }
colored = { version = "2.1", optional = true }
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1.48", features = ["full", "test-util"] }
pretty_assertions = "1.4"
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
