[package]
name = "oneiriq-surql"
version = "0.2.6"
edition = "2021"
rust-version = "1.90"
authors = ["Shon Thomas <shon@oneiriq.com>"]
license = "Apache-2.0"
description = "Code-first database toolkit for SurrealDB - schema definitions, migrations, query building, and typed CRUD (Rust port of oneiriq-surql). Published as the `oneiriq-surql` crate; imported as `use surql::...`."
repository = "https://github.com/Oneiriq/surql-rs"
homepage = "https://oneiriq.github.io/surql-rs"
documentation = "https://oneiriq.github.io/surql-rs"
readme = "README.md"
keywords = ["surrealdb", "database", "orm", "query-builder", "migrations"]
categories = ["database", "database-implementations"]

[lib]
name = "surql"
path = "src/lib.rs"

[[bin]]
name = "surql"
path = "src/bin/surql.rs"
required-features = ["cli"]

[[bench]]
name = "types"
harness = false

[features]
# Default to the pure-Rust TLS stack so `cargo add oneiriq-surql` does not
# pull `openssl-sys` into the dependency graph. The historical
# `native-tls`-backed variant is still available as the opt-in `client-tls`
# feature for consumers that need the system OpenSSL stack.
default = ["client-rustls"]
# The async-client surface is gated in source with
# `cfg(any(feature = "client", feature = "client-rustls"))`, so both
# variants expose the same `DatabaseClient` / `executor` / `crud` / `graph`
# API. Pick exactly one of `client` (the historical `native-tls` default)
# or `client-rustls` (pure-Rust TLS, no `openssl-sys`).
client = [
    "dep:tokio",
    "dep:surrealdb",
    "dep:reqwest",
    "dep:futures",
    "surrealdb/native-tls",
    "reqwest/default-tls",
]
# Alias for `client` -- the historical `native-tls` (openssl) backend.
# Kept as a named flag so downstream consumers can opt into the system
# OpenSSL stack with a stable feature name.
client-tls = ["client"]
# Pure-Rust TLS variant. Enables the same `client` code paths but swaps the
# TLS backend to `rustls` + webpki roots so nothing in the resolved
# dependency graph depends on `openssl-sys`. Use this variant on CI
# runners / images that do not install `libssl-dev`.
#
# Note that enabling this alongside `client` is additive and compiles, but
# the resulting binary will link both TLS stacks. Downstream workspaces
# should pick one variant and wire it through a workspace feature flag.
client-rustls = [
    "dep:tokio",
    "dep:surrealdb",
    "dep:reqwest",
    "dep:futures",
    "surrealdb/rustls",
    "reqwest/rustls-tls-webpki-roots",
]
# Wasm-friendly client surface (Oneiriq/surql-rs#115). Enables the same
# `DatabaseClient` / `executor` / `crud` / `graph` query API as
# `client-rustls`, but with a dependency set that compiles cleanly to
# `wasm32-unknown-unknown`:
#
#   * `surrealdb` is pulled with `protocol-ws` + `kv-mem` only. The browser
#     terminates TLS for `wss://`, so neither `rustls` (pulls `ring`,
#     which has no wasm32-unknown-unknown C build) nor `native-tls` is
#     enabled. `kv-mem` lets wasm callers run an embedded engine for
#     local state / tests with no server roundtrip.
#   * `reqwest` is **not** pulled. It is unused in `surql`'s source today
#     and `reqwest`'s default TLS stacks do not link on wasm.
#   * `tokio` features are reduced to the wasm-buildable subset
#     (`sync`, `macros`, `rt`) via the
#     `[target.'cfg(target_arch = "wasm32")'.dependencies]` block below;
#     `tokio::spawn` / `JoinHandle`-using code (`StreamingManager`) is
#     conditionally compiled out for wasm targets.
#
# This feature is additive: native callers can keep using
# `client-rustls`. Wasm callers should depend on
# `oneiriq-surql = { default-features = false, features = ["client-wasm"] }`.
client-wasm = [
    "dep:tokio",
    "dep:surrealdb",
    "dep:futures",
    "surrealdb/kv-mem",
]
cli = [
    "client-rustls",
    "orchestration",
    "settings",
    "dep:clap",
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:comfy-table",
    "dep:colored",
]
cache = ["dep:tokio", "dep:async-trait"]
cache-redis = ["cache", "dep:redis"]
settings = ["dep:dotenvy", "dep:toml"]
orchestration = ["client-rustls", "dep:async-trait"]
watcher = ["dep:notify", "dep:tokio", "dep:tokio-util"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tracing = "0.1"
ulid = { version = "1.1", features = ["serde"] }

# Optional (feature-gated). Note that `tokio` is declared per-target below
# so that wasm32 builds get a wasm-buildable feature subset (no
# `rt-multi-thread` / `net` / `process` / etc.).
#
# `surrealdb` and `reqwest` opt out of default features so the TLS backend is
# selected explicitly by the `client` / `client-rustls` feature flags. The
# default-feature set of `surrealdb` includes `rustls`; we prefer to be
# explicit so downstream consumers know which TLS stack they are pulling.
surrealdb = { version = "3.1", default-features = false, features = ["protocol-ws"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "http2", "system-proxy"], optional = true }
futures = { version = "0.3", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
redis = { version = "1.2", features = ["tokio-comp"], optional = true }
async-trait = { version = "0.1", optional = true }
dotenvy = { version = "0.15", optional = true }
toml = { version = "1.1", optional = true }
notify = { version = "8.2", optional = true }
tokio-util = { version = "0.7", optional = true }
comfy-table = { version = "7.1", optional = true }
colored = { version = "3.1", optional = true }
sha2 = "0.11"

# Native targets get the full tokio runtime (multi-threaded scheduler,
# network IO, filesystem helpers, signals, etc.). The historical default.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.52", features = ["full"], optional = true }

# Wasm targets get the wasm-buildable subset of tokio (no
# `rt-multi-thread`, no `net`, no `process`, no `signal`, no `fs`).
# `tokio::sync` / `tokio::time` / `tokio::task_local!` all build on
# `wasm32-unknown-unknown`; `tokio::spawn` is gated out at the source
# level where it appears (see `connection::streaming::StreamingManager`).
#
# `getrandom` is a transitive dependency (via `ulid` -> `rand_core`).
# On wasm it requires the `wasm_js` feature **and** the
# `--cfg=getrandom_backend="wasm_js"` rustc flag (see `.cargo/config.toml`).
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.52", default-features = false, features = ["sync", "macros", "rt", "time"], optional = true }
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1.48", features = ["full", "test-util"] }
pretty_assertions = "1.4"
tempfile = "3.13"
assert_cmd = "2.2"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
